[gd_scene load_steps=8 format=3 uid="uid://by7bfm72d1wo3"]

[ext_resource type="Texture2D" uid="uid://d4c1ptegdv51m" path="res://sprite/add_btn.png" id="1_snxeh"]
[ext_resource type="Script" path="res://script/information.gd" id="1_yqwmt"]
[ext_resource type="PackedScene" uid="uid://oj4iv3t4sn1k" path="res://scenes/icons.tscn" id="3_nc2tv"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ttewo"]
bg_color = Color(0.156863, 0.0470588, 0.278431, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.8, 0.215686, 0.411765, 1)
border_blend = true

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ujixh"]
bg_color = Color(0.156863, 0.0470588, 0.278431, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dd0ig"]
bg_color = Color(0.206682, 0.313128, 0.364627, 1)

[sub_resource type="Theme" id="Theme_vtoa2"]
LineEdit/styles/focus = SubResource("StyleBoxFlat_ttewo")
LineEdit/styles/normal = SubResource("StyleBoxFlat_ujixh")
PanelContainer/styles/panel = SubResource("StyleBoxFlat_dd0ig")

[node name="information" type="PopupPanel"]
transparent_bg = true
initial_position = 1
size = Vector2i(600, 800)
visible = true
script = ExtResource("1_yqwmt")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 4.0
offset_right = 596.0
offset_bottom = 796.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer"]
layout_mode = 2

[node name="BoxContainer" type="BoxContainer" parent="MarginContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
vertical = true

[node name="BoxContainer" type="BoxContainer" parent="MarginContainer/ScrollContainer/BoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/ScrollContainer/BoxContainer/BoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "تصویر کتاب را انتخاب کنید"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureButton" type="TextureButton" parent="MarginContainer/ScrollContainer/BoxContainer/BoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
size_flags_horizontal = 10
texture_normal = ExtResource("1_snxeh")
ignore_texture_size = true
stretch_mode = 5

[node name="HSeparator" type="HSeparator" parent="MarginContainer/ScrollContainer/BoxContainer"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="BoxContainer2" type="BoxContainer" parent="MarginContainer/ScrollContainer/BoxContainer"]
layout_direction = 3
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/ScrollContainer/BoxContainer/BoxContainer2"]
layout_mode = 2
text = "نام کتاب:"

[node name="LineEdit" type="LineEdit" parent="MarginContainer/ScrollContainer/BoxContainer/BoxContainer2"]
unique_name_in_owner = true
layout_direction = 3
layout_mode = 2
size_flags_horizontal = 3

[node name="BoxContainer3" type="BoxContainer" parent="MarginContainer/ScrollContainer/BoxContainer"]
layout_direction = 3
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/ScrollContainer/BoxContainer/BoxContainer3"]
layout_mode = 2
text = "نام نویسنده:"

[node name="LineEdit2" type="LineEdit" parent="MarginContainer/ScrollContainer/BoxContainer/BoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="BoxContainer4" type="BoxContainer" parent="MarginContainer/ScrollContainer/BoxContainer"]
layout_direction = 3
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/ScrollContainer/BoxContainer/BoxContainer4"]
layout_mode = 2
text = "لینک:"

[node name="LineEdit3" type="LineEdit" parent="MarginContainer/ScrollContainer/BoxContainer/BoxContainer4"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
alignment = 2
text_direction = 1
structured_text_bidi_override = 1

[node name="BoxContainer5" type="BoxContainer" parent="MarginContainer/ScrollContainer/BoxContainer"]
layout_direction = 3
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/ScrollContainer/BoxContainer/BoxContainer5"]
layout_mode = 2
text = " توضیحات:"

[node name="TextEdit" type="TextEdit" parent="MarginContainer/ScrollContainer/BoxContainer/BoxContainer5"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
size_flags_horizontal = 3
wrap_mode = 1
draw_control_chars = true

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/ScrollContainer/BoxContainer"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="BoxContainer6" type="BoxContainer" parent="MarginContainer/ScrollContainer/BoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
alignment = 1

[node name="Button" type="Button" parent="MarginContainer/ScrollContainer/BoxContainer/BoxContainer6"]
layout_mode = 2
text = "ایجاد"

[node name="BoxContainer7" type="BoxContainer" parent="MarginContainer/ScrollContainer/BoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme_override_constants/separation = 40
alignment = 1

[node name="Button" type="Button" parent="MarginContainer/ScrollContainer/BoxContainer/BoxContainer7"]
layout_mode = 2
text = "بروزرسانی"

[node name="Button2" type="Button" parent="MarginContainer/ScrollContainer/BoxContainer/BoxContainer7"]
layout_mode = 2
text = "حذف"

[node name="PopupPanel" parent="." instance=ExtResource("3_nc2tv")]
visible = false
theme = SubResource("Theme_vtoa2")

[connection signal="pressed" from="MarginContainer/ScrollContainer/BoxContainer/BoxContainer/TextureButton" to="." method="_on_texture_button_pressed"]
[connection signal="text_changed" from="MarginContainer/ScrollContainer/BoxContainer/BoxContainer2/LineEdit" to="." method="_on_line_edit_text_changed" binds= ["name"]]
[connection signal="text_changed" from="MarginContainer/ScrollContainer/BoxContainer/BoxContainer3/LineEdit2" to="." method="_on_line_edit_text_changed" binds= ["writer"]]
[connection signal="text_changed" from="MarginContainer/ScrollContainer/BoxContainer/BoxContainer4/LineEdit3" to="." method="_on_line_edit_text_changed" binds= ["link"]]
[connection signal="text_changed" from="MarginContainer/ScrollContainer/BoxContainer/BoxContainer5/TextEdit" to="." method="_on_text_edit_text_changed"]
[connection signal="pressed" from="MarginContainer/ScrollContainer/BoxContainer/BoxContainer6/Button" to="." method="_on_create_pressed"]
[connection signal="pressed" from="MarginContainer/ScrollContainer/BoxContainer/BoxContainer7/Button" to="." method="_on_update_pressed"]
[connection signal="pressed" from="MarginContainer/ScrollContainer/BoxContainer/BoxContainer7/Button2" to="." method="_on_delete_pressed"]
[connection signal="button_pressed" from="PopupPanel" to="." method="_on_popup_panel_button_pressed"]
